modify the html file

--- a/Git_learning.html
+++ b/Git_learning.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <p>I am Learning About Github</p>
+    <p>I want to learn in advance about Github</p>
+    <h3>Do you know about Bangladesh</h3>
 </body>
 </html>
