Added Man's Picture

--- a/Git_learning.html
+++ b/Git_learning.html
@@ -10,5 +10,7 @@
     <p>I am Learning About Github</p>
     <p>I want to learn in advance about Github</p>
     <h3>Do you know about Bangladesh</h3>
+    <img src="shahrukh-khan_8.jpg" width="400px" height="500px" alt="This is a hero's picture">
+    <img src="shahrukh-khan_9.jpg" width="400px" height="500px" alt="This is a hero's picture">
 </body>
 </html>
